--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,32 @@
-autopep8==1.6.0
-black==21.12b0
-click==8.0.3
-cycler==0.11.0
-dataclasses==0.8
-importlib-metadata==4.8.3
+backcall==0.2.0
+decorator==5.1.1
+entrypoints==0.3
+ipykernel==5.5.6
+ipython==7.16.2
+ipython-genutils==0.2.0
+jedi==0.17.2
 joblib==1.1.0
-kiwisolver==1.3.1
-lightgbm==3.3.1
+jupyter-client==7.1.1
+jupyter-core==4.9.1
+lightgbm==3.3.2
 llvmlite==0.36.0
-mypy-extensions==0.4.3
+nest-asyncio==1.5.4
 numba==0.53.1
 numpy==1.19.5
 pandas==1.1.5
-pathspec==0.9.0
-Pillow==8.4.0
-platformdirs==2.4.0
-pycodestyle==2.8.0
-pyparsing==3.0.6
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.24
+ptyprocess==0.7.0
+Pygments==2.11.2
 python-dateutil==2.8.2
 pytz==2021.3
+pyzmq==22.3.0
 scikit-learn==0.24.2
 scipy==1.5.4
 six==1.16.0
 threadpoolctl==3.0.0
-toml==0.10.2
-tomli==1.2.3
-typed-ast==1.5.1
-typing_extensions==4.0.1
-zipp==3.6.0
+tornado==6.1
+traitlets==4.3.3
+wcwidth==0.2.5
